RESOLVED FIXED 150503
[MediaStream] Fix UserMediaPermissionRequestProxy::invalidate
https://bugs.webkit.org/show_bug.cgi?id=150503
Summary [MediaStream] Fix UserMediaPermissionRequestProxy::invalidate
Eric Carlson
Reported 2015-10-23 08:47:30 PDT
UserMediaPermissionRequestManagerProxy::invalidateRequests calls invalidate on every pending UserMediaPermissionRequestProxy. UserMediaPermissionRequestProxy::invalidate calls UserMediaPermissionRequestManagerProxy::invalidateRequests and bad things happen.
Attachments
Proposed patch. (3.51 KB, patch)
2015-10-23 09:11 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2015-10-23 08:48:27 PDT
Eric Carlson
Comment 2 2015-10-23 09:11:34 PDT
Created attachment 263929 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2015-10-23 12:02:17 PDT
Comment on attachment 263929 [details] Proposed patch. Clearing flags on attachment: 263929 Committed r191504: <http://trac.webkit.org/changeset/191504>
WebKit Commit Bot
Comment 4 2015-10-23 12:02:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.