[MediaStream] Fix UserMediaPermissionRequestProxy::invalidate https://bugs.webkit.org/show_bug.cgi?id=150503 <rdar://problem/23235386>

Reviewed by Dean Jackson.

* UIProcess/UserMediaPermissionRequestProxy.cpp:
(WebKit::UserMediaPermissionRequestProxy::UserMediaPermissionRequestProxy): m_manager is a pointer.
(WebKit::UserMediaPermissionRequestProxy::allow): Return early if m_manager is null, clear it after
  calling the manager.
(WebKit::UserMediaPermissionRequestProxy::deny): Ditto.
(WebKit::UserMediaPermissionRequestProxy::invalidate): Clear m_manager.
* UIProcess/UserMediaPermissionRequestProxy.h: Change m_manager from a reference to a
  pointer so it can be cleared.


Canonical link: https://commits.webkit.org/168657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191504 268f45cc-cd09-0410-ab3c-d52691b4dbfc